# tkassa

./: .gitignore  Cargo.toml  README.md
src/: eventor.rs  main.rs
src/iof/: class_entry_fee.rs  class_result.rs  competitor.rs  entrant.rs  entry.rs  entry_fee.rs  event.rs  event_class.rs  eventor_time.rs  mod.rs  person_result.rs  race.rs
