[package]
name = "tkassa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
url = "2.3.1"
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = "1.0.147"
xmltree = "0.10.3"